# webrtc-ros-bridge-v2

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  cli.sh  docker-compose.yml  start.sh  stop.sh
.github/workflows/: ros2_ci.yml
agents/: README.md  chat_agent.py  langgraph.json  pyproject.toml
agents/examples/: robot_state_agent.py
app/: robot_profiles.json
app/server/: ice_servers.py  main.py  pyproject.toml  robot_profiles.py  signaling.py
app/www/: README.md  index.html  index.react.html  index.static.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
app/www/.storybook/: main.ts  preview.tsx
app/www/src/: App.css  App.tsx  index.css
docker/: Dockerfile.app  Dockerfile.bridge  Dockerfile.frodobot  Dockerfile.langgraph  Dockerfile.mcp  Dockerfile.perception  Dockerfile.sdk  Dockerfile.shell  Dockerfile.simulation  nginx-app.conf  turnserver.conf
docs/: LATENCY_REDUCTION_PLAN.md  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/blog/: 2025-02-21-welcome.md
docs/docs/: debugging.md  gazebo-on-mac.md  gazebo-simulation.md  intro.md
docs/src/components/: HomepageFeatures.js  HomepageFeatures.module.css
docs/src/css/: custom.css
docs/src/pages/: index.js  index.module.css
docs/static/img/: .gitkeep
foxglove/: README.md
mcp/: README.md  pyproject.toml  server.py
robot_sdks/frodobot-rover-sdk/: Dockerfile  pyproject.toml
robot_sdks/frodobot-rover-sdk/frodobot_rover_sdk/: __init__.py  main.py
ros2_ws/: TESTING.md
ros2_ws/install/: setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/bunny_boot/: package.xml  setup.cfg  setup.py
ros2_ws/src/bunny_controller/: package.xml  setup.cfg  setup.py
ros2_ws/src/bunny_perception_cpp/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/bunny_perception_cpp/bunny_perception_cpp/: __init__.py
ros2_ws/src/bunny_perception_cpp/bunny_perception_cpp/nodes/: __init__.py  da3_node.py  floor_mask_node.py  optical_flow_node.py
ros2_ws/src/bunny_perception_cpp/include/bunny_perception_cpp/: da3_node.hpp  floor_mask_node.hpp  optical_flow_node.hpp
ros2_ws/src/bunny_perception_cpp/scripts/: floor_mask_node  optical_flow_node
ros2_ws/src/bunny_perception_cpp/src/: da3_node.cpp  floor_mask_node.cpp  optical_flow_node.cpp
ros2_ws/src/bunny_robot_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/bunny_teleop/: package.xml  setup.cfg  setup.py
ros2_ws/src/connectx_boot/: package.xml  setup.cfg  setup.py
ros2_ws/src/connectx_boot/connectx_boot/launch/: connectx.launch.py
ros2_ws/src/connectx_boot/test/: conftest.py  test_launch_integration.py
ros2_ws/src/connectx_controller/: package.xml  setup.cfg  setup.py
ros2_ws/src/connectx_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/connectx_msgs/msg/: FlowRegions.msg  NavigationState.msg
ros2_ws/src/connectx_perception_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/connectx_perception_cpp/include/connectx_perception_cpp/: floor_mask_node.hpp  optical_flow_node.hpp
ros2_ws/src/connectx_perception_cpp/src/: floor_mask_node.cpp  optical_flow_node.cpp
ros2_ws/src/connectx_planner/: package.xml  setup.cfg  setup.py
ros2_ws/src/connectx_robot_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/connectx_robot_bridge/connectx_robot_bridge/: __init__.py
ros2_ws/src/connectx_robot_bridge/connectx_robot_bridge/core/: cmd_vel_mapping.py  config_manager.py  constants.py  exceptions.py  robot_base.py  robot_factory.py
ros2_ws/src/connectx_robot_bridge/connectx_robot_bridge/nodes/: __init__.py  bridge_node.py  calibration_node.py
ros2_ws/src/connectx_robot_bridge/connectx_robot_bridge/robot_sdk/earth_rovers_sdk/: __init__.py  browser_service.py  exceptions.py  main.py  rtm_client.py
ros2_ws/src/connectx_robot_bridge/connectx_robot_bridge/robot_sdk/earth_rovers_sdk/static/: basicVideoCall.js
ros2_ws/src/connectx_robot_bridge/connectx_robot_bridge/robots/: __init__.py  earth_rovers_robot.py
ros2_ws/src/connectx_robot_bridge/connectx_robot_bridge/utils/: __init__.py  rtm_client.py
ros2_ws/src/connectx_robot_bridge/test/: conftest.py  test_bridge_mapping.py  test_config_manager.py  test_placeholder.py
ros2_ws/src/connectx_simulation/: package.xml  setup.cfg  setup.py
ros2_ws/src/connectx_simulation/config/: bridge_params.yaml
ros2_ws/src/connectx_simulation/connectx_simulation/: __init__.py
ros2_ws/src/connectx_simulation/connectx_simulation/nodes/: __init__.py  pose_to_tf.py  robot_description_publisher.py  room_markers.py  room_walls.py
ros2_ws/src/connectx_simulation/launch/: sim.launch.py
ros2_ws/src/connectx_simulation/models/box_car/: model.config  model.sdf
ros2_ws/src/connectx_simulation/urdf/: box_car.urdf
ros2_ws/src/connectx_simulation/worlds/: box_car_world.sdf
ros2_ws/src/connectx_teleop/: package.xml  setup.cfg  setup.py
ros2_ws/src/optical_flow_nav/: CMakeLists.txt  package.xml
ros2_ws/src/optical_flow_nav/config/: default.yaml
ros2_ws/src/optical_flow_nav/include/optical_flow_nav/: band_metrics.cpp  band_metrics.hpp  flow_estimator.cpp  flow_estimator.hpp  masker.cpp  masker.hpp  motion_compensation.cpp  motion_compensation.hpp  risk_estimator.cpp  risk_estimator.hpp  types.hpp
ros2_ws/src/optical_flow_nav/launch/: optical_flow_nav.launch.py
ros2_ws/src/optical_flow_nav/msg/: NavigationState.msg
ros2_ws/src/optical_flow_nav/scripts/: test_video_publisher_node  video_overlay_recorder_node
ros2_ws/src/optical_flow_nav/src/: optical_flow_node.cpp
ros2_ws/src/scout_boot/: package.xml  setup.cfg  setup.py
ros2_ws/src/scout_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/scout_controller/: package.xml  setup.cfg  setup.py
ros2_ws/src/scout_msgs/: CMakeLists.txt  package.xml
scripts/: camera_compressed_to_raw_relay.py  depth_relay_to_app.py  download_models.py  floor_mask_relay_to_app.py  open-foxglove-gazebo.sh  optical_flow_image_to_compressed.py  optical_flow_relay_to_app.py  run_depth_single_image.py  run_perception_with_relay.sh  run_ros2_ci_local.sh  sim_control_relay.py  test_perception.sh
(+192 files in other folders)
