<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>connectx_robot_bridge</name>
  <version>0.0.0</version>
  <description>ROS2 bridge for ConnectX robot: cmd_vel to robot control, camera feed, telemetry. Teleop/WebRTC nodes live in connectx_teleop.</description>
  <maintainer email="connectx@example.com">ConnectX</maintainer>
  <license>Apache-2.0</license>

  <depend>builtin_interfaces</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_mypy</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
